# DGSI

./: .dockerignore  .gitignore  README.md  Requirements.rtf  pyproject.toml  report.md
.github/: ISSUE-01-setup.md  ISSUE-02-database-schema.md  ISSUE-03-authentication.md  ISSUE-04-docker.md  ISSUE-05-seed-data.md  ISSUE-06-demand-generation.md  ISSUE-07-inventory-service.md  ISSUE-08-order-service.md  ISSUE-09-purchase-order-service.md  ISSUE-10-event-logging.md  ISSUE-11-simulation-engine.md  ISSUE-12-api-auth.md  ISSUE-13-api-config.md  ISSUE-15-api-orders.md  (+28 more)
manufacturer/: README.md  pyproject.toml  requirements.txt
manufacturer/app/: __init__.py  main.py
manufacturer/app/api/: dependencies.py
manufacturer/app/api/endpoints/: auth.py  import_export.py  inventory.py  orders.py  simulation.py
manufacturer/app/core/: config.py  database.py  security.py
manufacturer/app/models/: event.py  purchase_order.py  simulation.py  user.py
manufacturer/app/services/: inventory_service.py  seed.py
manufacturer/app/utils/: json_export.py
manufacturer/dashboard/: style.py
manufacturer/dashboard/components/: event_log.py  orders_panel.py
manufacturer/docker/: entrypoint.sh
manufacturer/docs/: PRD.md
manufacturer/docs/superpowers/plans/: 2026-03-26-production-simulator.md  2026-04-15-dashboard-ui-remodel.md
manufacturer/sample_data/: default_production_plan.json
manufacturer/tasks/: todo.md
manufacturer/tests/: conftest.py
manufacturer/tests/test_api/: test_integration.py
manufacturer/tests/test_services/: test_order_service.py  test_phase_2_logic.py
(+34 files in other folders)
