[project]
name = "printer-factory-sim"
version = "0.1.0"
description = "3D Printer Production Simulator"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "python-multipart>=0.0.17",
    "streamlit>=1.40.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "coverage>=7.6.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
